# aos2-bot

./: .env.example  Makefile  README.md  conda-env.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env
docs/: README.md
emi/: __main__.py  aos2environment.py  controls.py  math.py  settings.py  vision.py  window.py
emi/bot/: aos2environment.py  controls.py  vision.py
emi/bot/vision/: __init__.py  arena_data.py  arena_vision_model.py  interface_data.py  ocr_engine.py  opencv_extensions.py
emi/dataset/: __init__.py  gathering.py
emi/demos/: __init__.py  object_detection.py  screenshot_gathering.py
emi/primitives/: __init__.py  color.py  rectangle.py  vector2.py
emi/settings/: __init__.py  all.py  game.py  ocr.py  ui_1366x768.py  ui_800x600.py  yolo.py
emi/windows/: __init__.py  hook_listener_thread.py  window.py
model/: labels.txt
src/: __main__.py
src/bot/: aos2environment.py  controls.py
src/bot/vision/: __init__.py  arena_data.py  arena_vision_model.py  interface_data.py  ocr_engine.py  opencv_extensions.py
src/demos/: __init__.py  object_detection.py  screenshot_gathering.py
src/primitives/: __init__.py  color.py
src/settings/: __init__.py  all.py  game.py  ui_1366x768.py  ui_800x600.py  yolo.py
src/windows/: __init__.py  hook_listener_thread.py  window.py
